# ComplexityTest

./: .gitignore  CMakeLists.txt  algorithm.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwindow.cpp  plotwindow.h  plotwindow.ui
